# PICMake

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  CMakeLists.txt  PICMake.cmake  README.md
cmake/: CMake.md  FindOpenCV3.cmake  FindQGLViewer.cmake  FindQt.cmake  PICMake.cmake  PICMakeLists.cmake  PICMakeUtils.cmake  tab_completion.sh
cmake/learn/testCMakeApp/: CMakeLists.txt  main.cpp
cmake/learn/testCMakeLib/: CMakeLists.txt
examples/: CMakeLists.txt
examples/0_simple_app/: CMakeLists.txt
examples/1_simple_library/: CMakeLists.txt  showImage.cpp  showImage.h
examples/MultiTargets/: CMakeLists.txt  DemoApp1.cpp  DemoApp2.cpp  DemoLibShared.cpp
src/: CMakeLists.txt
src/AppDemo/: CMakeLists.txt  main.cpp
src/ConditionalApp/: CMakeLists.txt  main.cpp
src/SharedLibDemo/: CMakeLists.txt  SharedLibDemo.cpp  SharedLibDemo.h
src/StaticLibDemo/: CMakeLists.txt  StaticLibDemo.cpp  StaticLibDemo.h
src/picmake/: CMakeLists.txt
src/picmake/src/: filesystem.hpp  main.cpp
